--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,9 +36,13 @@ theme:
     # logos:
     #   - assets/icons/board.svg
     #   - assets/icons/ai_sdk.svg
-    btn:
-      name: Get the Board
-      url: evk/
+    btns:
+      - name: Go to Renesas RZ Linux Solutions homepage
+        url: https://renesas-rz.github.io/rz_solution/
+        image: assets/images/Explore_more_RZ_Linux_Solutions.png
+        new_tab: true
+        mobile_text_link: false
+    no_title: true
   palette:
     primary: custom
 
