rz bsp plus: move out analytics property in mkdocs.yml
- create new file called g-analytics-key.txt to store property value.
- update .github/workflows/web-update.yml,
to grep property from g-analytics-key.txt.
- this change to prevent analytics record all activities,
when host/serve on development environment (wihtout analytics property).

Signed-off-by: Djuned Fernando Djusdek <djunedfernando.djusdek.wz@renesas.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -73,8 +73,7 @@ extra:
   #   provider: mike
   analytics:
     provider: google
-    property: G-B7JGMHHT12
-    # https://renesas-rz.github.io/rz_linux_bsp_plus/
+    property: !ENV GOOGLE_ANALYTICS_KEY
 
 extra_css:
   - assets/stylesheets/extra.css
